16. Güzel bir örnek

--- a/rama/hikmet.html
+++ b/rama/hikmet.html
@@ -21,14 +21,17 @@ Söz konusu ayet Bakara suresinde üç şey söylüyor:<br>
 * Allah hikmeti dilediğine verir<br>
 * Hikmetin kendisi hayırdır<br>
 * Hikmetin önemini az kişi anlar<br>
-
+<br>
+Demek istenecek şey, maldan ve ilimden önce hikmet...
+Hikmeti kul isteyecek, Allah dilediğine verecek.
 <p class=ayet>
 2:269 <b>yu-til-hikmete men yeşâ</b> <br>
 <i><a name="v=2:269&r=Hkm">Hikmeti dilediğine</a> verir, 
 hikmet verilene pek çok hayır verilmiş demektir. 
 Ve bunu ancak ulul-elbâb (özlü akıllar) anlar.</i> 
 </p>
-<img src="https://1.bp.blogspot.com/-TeSyaItuCmk/Xq9rRjh9y-I/AAAAAAAAbNo/VHL__l1xGkg7GcCrc-6-UCbpPSAjycxPwCLcBGAsYHQ/s1600/yu-til%2Bhikmete.JPG" />
+<img style="width: 100%;"
+src="https://1.bp.blogspot.com/-TeSyaItuCmk/Xq9rRjh9y-I/AAAAAAAAbNo/VHL__l1xGkg7GcCrc-6-UCbpPSAjycxPwCLcBGAsYHQ/s1600/yu-til%2Bhikmete.JPG" />
 <div class="center small">yu-til-hikmete men yeşâ
 </div><br>
 <br>
