--- a/rama/index.html
+++ b/rama/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport"    content="width=device-width">
     <meta name="author"      content="M A Eyler, Istanbul, 2021" />
     <meta name="description" content="Words from Quran" />
-    <link rel="stylesheet" href="rama.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
     <title>Ramazan 1442</title>
   </head>
   <style>
+    body {
+      max-width: 600px;
+      padding: 0 10px;
+      margin: auto;
+      font: 15px/1.4 sans-serif;
+      background: #dfd;
+    }
     ol {
       display: inline-block;
       width: 49%;
@@ -50,7 +56,7 @@
   <li>10. <a href="mulk.html">Bugün mülk kimin?</a></li>
   <li>11. <a href="millet.html">İbrahim milleti</a></li>
   <li>12. <a href="sidq.html">Doğruluk dili</a></li>
-  <li>13. İbret alın</li>
+  <li>13. <a href="ibret.html">İbret alın</a></li>
   <li>14. Hikmeti dilediğine verir</li>
   <li>15. Yumuşak huy</li>
 </ol>
