--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -13,10 +13,9 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<ol>12. <a href="sidq.html">Doğruluk dili</a></ol>
-<ol>13. <a href="ibret.html">İbret alın</a></ol>
-<ol>14. <a href="hikmet.html">Hikmeti dilediğine verir</a></ol>
-<ol>15. <a href="huy.html">Yumuşak huy</a></ol>
+<li>14. <a href="hikmet.html">Hikmeti dilediğine verir</a></li>
+<li>15. <a href="huy.html">Yumuşak huy</a></li>
+<li>16. <a href="usve.html">Güzel bir örnek</a></li>
 
 <p class=ayet>
 <b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
