--- a/rama/index.html
+++ b/rama/index.html
@@ -33,11 +33,11 @@
     p {
       margin-top: 4px;
     }
-    @media screen and (max-width: 400px) {
+  @media screen and (max-width: 400px) {
     ol  {
         width: 95%;
     }
-}
+  }
   </style>
   <body>
 
@@ -91,33 +91,10 @@ Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
 en azından, Kuran kelimelerine aşina olursunuz.
 </p>
 
-<h3>Paylaşalım lutfen:</h3>
-<!-- <p>
-<a target=Kuran href="https://groups.google.com/g/rama30">
-  https://groups.google.com/g/rama30</a> <br>
-<a target=Kuran href="https://twitter.com/okuyun5">
-  https://twitter.com/okuyun5</a> <br>
-<a target=Kuran href="https://www.instagram.com/okuyun.5">
-  https://www.instagram.com/okuyun.5</a> 
-</p>
-<a target=Kuran
+<!-- <a target=Kuran
 href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
 Videolar burada</a> -->
 
-<p>&ensp;
-<a href="https://groups.google.com/g/rama30"  target="Kuran"><img alt="https://groups.google.com/g/rama30" src="/Kitap/icon/email.png" style="width: 36px" /></a>
-&ensp;
-<a href="https://twitter.com/okuyun5"  target="Kuran"><img alt="https://twitter.com/okuyun5" src="/Kitap/icon/twitter.png" style="width: 36px" /></a>
-&ensp;
-<a href="https://instagram.com/okuyun.5/"  target="Kuran"><img alt="https://instagram.com/okuyun.5/" src="/Kitap/icon/instagram.png" style="width: 34px"/></a>
-&ensp;
-<a href="https://linkin.bio/okuyun-5"  target="Kuran"><img alt="https://linkin.bio/okuyun-5" src="/Kitap/icon/link2.png" style="width: 38px" /></a>
-<!-- &ensp; <a href="https://facebook.com/okuyun5"  target="Kuran"><img alt="https://facebook.com/okuyun5" src="/Kitap/icon/facebook.png" style="width: 36px" /></a> -->
-&ensp;
-<a href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd"  target="Kuran"><img alt="https://youtube.com/" src="/Kitap/icon/youtube.png" style="width: 38px" /></a>
-&ensp;
-<a href="https://github.com/Okuyun/Kitap"  target="Kuran"><img alt="https://github.com/Okuyun/Kitap"" src="/Kitap/icon/github.webp" style="width: 40px" /></a>
-</p>
-<br>
+    <script src="init.js"></script>
   </body>
 </html>
