--- a/rama/index.html
+++ b/rama/index.html
@@ -57,7 +57,7 @@
   <li>11. <a href="millet.html">İbrahim milleti</a></li>
   <li>12. <a href="sidq.html">Doğruluk dili</a></li>
   <li>13. <a href="ibret.html">İbret alın</a></li>
-  <li>14. Hikmeti dilediğine verir</li>
+  <li>14. <a href="hikmet.html">Hikmeti dilediğine verir</a></li>
   <li>15. Yumuşak huy</li>
 </ol>
 <ol>
