--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -15,6 +15,7 @@
 
 <li>15. <a href="huy.html">Yumuşak huy</a></li>
 <li>16. <a href="usve.html">Güzel bir örnek</a></li>
+<li>17. <a href="rahmet.html">Alemlere rahmet</a></li>
 
 <p class=ayet>
 <b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
