18. lâ ilâhe illâ

--- a/rama/index.html
+++ b/rama/index.html
@@ -58,7 +58,7 @@
   <li>12. <a href="sidq.html">Doğruluk dili</a></li>
   <li>13. <a href="ibret.html">İbret alın</a></li>
   <li>14. <a href="hikmet.html">Hikmeti dilediğine verir</a></li>
-  <li>15. Yumuşak huy</li>
+  <li>15. <a href="huy.html">Yumuşak huy</a></li>
 </ol>
 <ol>
   <li>16. Güzel bir örnek</li>
