--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -13,9 +13,11 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>15. <a href="huy.html">Yumuşak huy</a></li>
 <li>16. <a href="usve.html">Güzel bir örnek</a></li>
 <li>17. <a href="rahmet.html">Alemlere rahmet</a></li>
+<li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
+<li>19. <a href="ondokuz.html">On dokuz</a></li>
+<li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
 
 <p class=ayet>
 <b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
