--- a/rama/index.html
+++ b/rama/index.html
@@ -64,7 +64,7 @@
   <li>16. Güzel bir örnek</li>
   <li>17. Alemlere rahmet</li>
   <li>18. lâ ilâhe illâ ...</li>
-  <li>19. On dokuz</li>
+  <li>19. min azmil-umûr</li>
   <li>20. yevme lâ yenfa'u</li>
   <li>21. Emrolunduğun gibi</li>
   <li>22. Emredileni yaparlar</li>
