--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -16,7 +16,7 @@
 <li>16. <a href="usve.html">Güzel bir örnek</a></li>
 <li>17. <a href="rahmet.html">Alemlere rahmet</a></li>
 <li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
-<li>19. <a href="ondokuz.html">On dokuz</a></li>
+<li>19. <a href="azmil.html">min azmil-umûr</a></li>
 <li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
 
 <p class=ayet>
@@ -25,23 +25,17 @@
 <b></b> <br>
 <i></i>
 </p>
-<br><br>
 <img src="" />
 <div class="center small">
 <a  target="Kuran"
   href=""></a>
 </div><br>
-<b></b>
-<br>
-<br><br>
 <a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
 <p class=ayet>
 <b></b> <br>
-<i></i> <br>
-<b></b> <br>
 <i><a name="v=12:39&r=wHd&r=qhr"></a></i>
 </p><br>
-<br>
+
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
