--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -25,11 +25,15 @@
 <b></b> <br>
 <i></i>
 </p>
-<img src="" />
-<div class="center small">
-<a  target="Kuran"
-  href=""></a>
-</div><br>
+<figure>
+  <img alt=""
+       src="" />
+  <figcaption class="center small">
+    <a target="Kuran" href=""></a>
+  </figcaption>
+</figure>
+<br>
+
 <a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
 <p class=ayet>
 <b></b> <br>
