20. yevme lâ yenfa'u

--- a/rama/azmil.html
+++ b/rama/azmil.html
@@ -43,10 +43,13 @@ her ikisi de 'ayn sesi ile başlar.
 42:43 <i class=ayet>Sabredip bağışlayanın işi, işte bu 
   <a name="v=42:43&r=Ezm&r=Amr">azme değer işlerdendir</a>.</i><br>
 </p>
-<img src="../icon/min azmil-umur.jpg" />
-<div class="center">
-  <b class=ayet>zâlike min azmil-umûr</b>
-</div>
+<figure>
+  <img alt="Şura suresinden bir ayet"
+       src="../icon/min azmil-umur.jpg"" />
+  <figcaption class="center">
+    <b class=ayet>zâlike min azmil-umûr</b>
+  </figcaption>
+</figure>
 <p>
 31:17 <i class=ayet>"Ey oğulcuğum! Namazı kıl, uygun olanı buyurup fenalığı önle, 
   başına gelene sabret; doğrusu bunlar 
