--- a/rama/bismillah.html
+++ b/rama/bismillah.html
@@ -15,7 +15,7 @@
 
 1442 hicri yılının Ramazan ayı yarın (13 Nisan 2021) başlıyor, mübarek olsun, bereketi ile gelsin... "Bismillah her hayrın başıdır" diyerek her gün kısa bir ders yapalım inşaallah... ilk konu <b>bismillah</b>, sonu da <b>elhamdulillah </b>olsun.
 <br><br>
-<img data-original-height="251" data-original-width="696"
+<img style="width: 100%;"
 src="https://1.bp.blogspot.com/-QYUKo6IAfFs/XqEg-Ym7MVI/AAAAAAAAbFs/1wKhUb14vc0tFrFgS9dVORlKTViQwAVcgCEwYBhgL/s1600/KemalBatanay_010-696x251.jpg" />
 <div class=center>
   bismillâhirrahmânirrahîm
@@ -34,8 +34,7 @@ src="https://1.bp.blogspot.com/-QYUKo6IAfFs/XqEg-Ym7MVI/AAAAAAAAbFs/1wKhUb14vc0t
 <i>Rahmân ve Rahîm olan Allah'ın adıyla</i>
 </span>
 <br><br>
-<img data-original-height="649" data-original-width="965"
-src="https://1.bp.blogspot.com/-hAnXlaOSl5A/XqPfoumOCFI/AAAAAAAAbIE/A7yKLbFgWaMI3aoy8WVuUPiOc-54Rcd9ACLcBGAsYHQ/s1600/besmele%2Btablo.jpg" />
+<img src="https://1.bp.blogspot.com/-hAnXlaOSl5A/XqPfoumOCFI/AAAAAAAAbIE/A7yKLbFgWaMI3aoy8WVuUPiOc-54Rcd9ACLcBGAsYHQ/s1600/besmele%2Btablo.jpg" />
 <br><br>
 <h3>2. Büyük bir nebinin sözü</h3>
 Çok önemli bir işe başlarken söylediği besmele ile bize örnek oluyor. Bir asansörün düğmesine basarken, arabanın motorunu çalıştırırken, hep bu sözü söyleyip bu anlamı düşünürüm: Yürüten de O, durduran da O. Gemiyi de, asansörü de, arabayı da, beni de, seni de, evreni de...<br><br>
@@ -54,8 +53,7 @@ Gemiye binmenin Allah'a teslimiyet olduğunu anlıyoruz. Evet, Hz. Nûh geminin 
 <br><br>
 Hem melik (kral), hem nebi. Aynı anda saltanat ve hikmet sahibi. <s>Yıldızlara</s> Güneşe secde eden bir kavmin melikesine mektup yazıyor. Ayette, melikenin ağzından mektubun ilk satırı okunuyor. Aşağıdaki hat levhasına konu olmuş. Hem ayet yazılı, hem de besmele. Surenin devamında, bu söz ile hayretler içinde kalan melikenin sonraki teslimiyeti anlatılıyor.
 <br><br>
-<img data-original-height="240" data-original-width="240" 
-src="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s1600/besmele.0.jpg" />
+<img src="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s1600/besmele.0.jpg" />
 <div class="center small">
   innehû min suleymâne veinnehû bismillâhirrahmânirrahîm
 </div>   
