--- a/rama/index.html
+++ b/rama/index.html
@@ -61,7 +61,7 @@
   <li>15. <a href="huy.html">Yumuşak huy</a></li>
 </ol>
 <ol>
-  <li>16. Güzel bir örnek</li>
+  <li>16. <a href="usve.html">Güzel bir örnek</a></li>
   <li>17. Alemlere rahmet</li>
   <li>18. lâ ilâhe illâ ...</li>
   <li>19. min azmil-umûr</li>
