--- a/rama/rahmet.html
+++ b/rama/rahmet.html
@@ -53,12 +53,24 @@ src="https://1.bp.blogspot.com/-q7DzZ7V7njI/Xrfg_5xbeQI/AAAAAAAAbRs/Sh4ZJH8mMBwZ
   href="http://www.kalemguzeli.org/hatteserleriayrinti.php?KNO=293&HKNO1=141">
     Kalem Güzeli</a>
 </div><br>
+<p>Peki, o rahmetin eserini nasıl seveceğiz?</p>
+<p>
+3:31 <i class=ayet>De ki, <a name="v=3:31&r=Hbb">siz Allah'ı seviyorsanız</a> 
+  bana uyun ki, Allah da sizi sevsin ve suçlarınızı bağışlasın.</i>
+</p>
+<p>Şu âyet-i kerime der ki: 
+  <q>Eğer Allah'a muhabbetiniz varsa, Habibullaha ittibâ edilecek. 
+    İttibâ edilmezse, netice veriyor ki, Allah'a muhabbetiniz yoktur.
+  </q><br>
+<a target="Kuran" href="https://risaleoku.com/oku/lemalar/52">11. Lem'a</a>
+</p>
+<br>
 <i>
 essalâtu vesselâmu 'aleyke yâ rasûlallâh<br>
 essalâtu vesselâmu 'aleyke yâ emîne vahyillâh<br>
 essalâtu vesselâmu 'aleyke yâ seyyidel-evvelîne vel-âhirîn<br>
 </i>
-<br><br>
+<br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/p0sxwT2MVnc" 
