--- a/rama/rahmet.html
+++ b/rama/rahmet.html
@@ -60,8 +60,7 @@ src="https://1.bp.blogspot.com/-q7DzZ7V7njI/Xrfg_5xbeQI/AAAAAAAAbRs/Sh4ZJH8mMBwZ
 </p>
 <p>Şu âyet-i kerime der ki: 
   <q>Eğer Allah'a muhabbetiniz varsa, Habibullaha ittibâ edilecek. 
-    İttibâ edilmezse, netice veriyor ki, Allah'a muhabbetiniz yoktur.
-  </q><br>
+    İttibâ edilmezse, netice veriyor ki, Allah'a muhabbetiniz yoktur.</q><br>
 <a target="Kuran" href="https://risaleoku.com/oku/lemalar/52">11. Lem'a</a>
 </p>
 <br>
