--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -13,11 +13,13 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>16. <a href="usve.html">Güzel bir örnek</a></li>
 <li>17. <a href="rahmet.html">Alemlere rahmet</a></li>
 <li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
 <li>19. <a href="azmil.html">min azmil-umûr</a></li>
 <li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
+<li>21. <a href="festaqim.html">Emrolunduğun gibi</a></li>
+<li>22. <a href="yaparlar.html">Emredileni yaparlar</a></li>
+<li>23. <a href="zikir.html">Zikir ve şükür</a></li>
 
 <p class=ayet>
 <b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
