23. Zikir ve şükür

--- a/rama/festaqim.html
+++ b/rama/festaqim.html
@@ -13,7 +13,7 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<p>"Hud suresi beni kocattı" demiş Efendimiz...
+<p>"Hud suresi beni kocattı" demiş Efendimiz...<br> Salat ve selam ona
 </p>
 <figure>
   <img alt="Kalem Güzeli kitabından bir levha"
@@ -38,7 +38,7 @@ Bu söz (fe/ve farkı ile)
   Onların keyiflerine uyma ve de ki: ...</i>
 </p>
 <p>
-Başka bir rivayete göre peygamberimiz "Hûd Suresi ve <b>kardeşleri</b> beni ihtiyarlattı" demiş. Surelerin, okuyanlar lehinde şahit olacağını bildiren haber gibi, surelere kişilik kazandırıyor.
+Başka bir rivayete göre peygamber Efendimiz "Hûd Suresi ve <b>kardeşleri</b> beni ihtiyarlattı" demiş. Surelerin, okuyanlar lehinde şahit olacağını bildiren haber gibi, surelere kişilik kazandırıyor.
 </p>
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
