--- a/rama/son.html
+++ b/rama/son.html
@@ -7,26 +7,35 @@
     <meta name="description" content="Words from Quran" />
     <link rel="stylesheet" href="rama.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Yeni sayfa</title>
+    <title>30. Dualarının sonu</title>
   </head>
 
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
-<li>19. <a href="azmil.html">min azmil-umûr</a></li>
-<li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
-<li>21. <a href="festaqim.html">Emrolunduğun gibi</a></li>
-<li>22. <a href="yaparlar.html">Emredileni yaparlar</a></li>
-<li>23. <a href="zikir.html">Zikir ve şükür</a></li>
-<li>24. <a href="hesap.html">Hesabı hızlıdır</a></li>
-<li>25. <a href="sabri.html">Sabrı tavsiye</a></li>
-<li>26. <a href="older.html">Ona "ol" der</a></li>
-<li>27. <a href="insaa.html">inşâallâh</a></li>
-<li>28. <a href="korku.html">Korku ve hüzün</a></li>
-<li>29. <a href="onubiz.html">Onu Biz koruruz</a></li>
 <li>30. <a href="son.html">Dualarının sonu</a></li>
+
+<p class=ayet>
+<b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
+<i></i> <br>
+<b></b> <br>
+<i></i>
+</p>
+<figure>
+  <img alt=""
+       src="" />
+  <figcaption class="center small">
+    <a target="Kuran" href=""></a>
+  </figcaption>
+</figure>
 <br>
+
+<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
+<p class=ayet>
+<b></b> <br>
+<i><a name="v=12:39&r=wHd&r=qhr"></a></i>
+</p><br>
+
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
