--- a/rama/rahmet.html
+++ b/rama/rahmet.html
@@ -26,9 +26,13 @@ src="https://1.bp.blogspot.com/-QAfcRaK_1Ho/XrIh4E2Uv1I/AAAAAAAAbPc/0284CawPqWw8
 <p>
 Neden alemlere rahmettir o? Çünkü "belâ" dediğimiz günde Rabbimiz bize böyle bir söz vermedi. Buraya gelmeden önce yaptığımız anlaşmada uyarılmak yoktu. İnsana vicdan verilmişti, iyiyi kötüden ayırmak için. Akıl verilmişti, bir Yaratıcısı olduğunu bilmek için. Gönül verilmişti, O'nu özlemek, O'nu sevmek için.<br>
 <br>
-Fakat bunlar yetmedi insana. Uyarılmak ve müjdelenmek gerekiyordu. Bunun için en yakın, güçlü meleğini görevlendirdi. Kendi sözünü ona yükleyip gönderdi. Bunu taşımaya gücü yetecek bir insan yarattı. Rahmetin üçlü tecellisi buydu işte:<br>
+Fakat bunlar yetmedi insana. Uyarılmak ve müjdelenmek gerekiyordu. 
+Bunun için en yakın, güçlü meleğini görevlendirdi. Kendi sözünü ona 
+yükleyip gönderdi. Bunu taşımaya gücü yetecek bir insan yarattı. <br>
+Rahmetin üçlü tecellisi buydu işte:<br><br>
 <b>... ve melâiketihi ve kutubihi ve rusulihi</b><br>
-Cebrail, Kuran, Muhammed (salat ve selam ona)<br>
+meleği: Cebrail, kitabı: Kuran, <br>
+elçisi: Muhammed (salat ve selam ona)<br>
 <br>
 Belki gene bulurduk iyiyle kötüyü,<br>
 Belki gene bilirdik Yaratanımızı,<br>
