--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -13,7 +13,6 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
 <li>19. <a href="azmil.html">min azmil-umûr</a></li>
 <li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
 <li>21. <a href="festaqim.html">Emrolunduğun gibi</a></li>
@@ -28,8 +27,8 @@
 <li>30. <a href="son.html">Dualarının sonu</a></li>
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
-<br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<!-- <br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
 </iframe><br> -->
