add video links

--- a/ders/05.html
+++ b/ders/05.html
@@ -14,7 +14,7 @@
 <h2>5. Sayılar &emsp; <button class=goBack>◀</button></h2>
 
 <p>Sayılar isim tamlaması gibi kullanılır: <br>
-Yedi kapı => Kapının yedisi</p>
+Yedi kapı => Kapıların yedisi</p>
 
 <h3>1 ve 2</h3>
 <pre>
@@ -65,7 +65,12 @@ Yedi kapı => Kapının yedisi</p>
 </p>
 
 <p>Dersler <button class=goBack>◀</button>
-</p>
+</p><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VKn2brZN3WE" 
+  title="YouTube video player" frameborder="0"  allowfullscreen
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+</iframe><br>
+
     <script src="init.js"></script>
   </body>
 </html>
