--- a/rama/azmil.html
+++ b/rama/azmil.html
@@ -60,10 +60,10 @@ her ikisi de 'ayn sesi ile başlar.
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/k8Ip5ssxdOc" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
