--- a/rama/illa.html
+++ b/rama/illa.html
@@ -26,10 +26,11 @@ huve: o
   href="https://islamansiklopedisi.org.tr/kelime-i-tevhid">kelime-i-tevhid</a>
 </div><br>
 
-Aramaya <a href="/Kuran/#b=lA%20<lh%20<lA">şu linkten</a> başlayınca 36 ayet çıkıyor:
+Harekesiz "<b>lâ ilâhe illâ</b>" arayınca 
+<a href="/Rehber/finder.html#b=lA%20<lh%20<lA" target="finder">36 ayet</a> çıkıyor:
 <img src="https://1.bp.blogspot.com/--olmK7i6pNg/Xrkj76-9tjI/AAAAAAAAbSM/GaBu8eyePOQqXmn9WKFEzQ_Ms6YHJ-3nQCLcBGAsYHQ/s1600/la%2Bilahe%2Billa.png" />
 <br>
-Sonra gelen kelimeye göre gruplandıralım:<br>
+Bu örnekte ayet sayısı çok fazla. Sonra gelen kelimeye göre gruplandıralım:<br>
 <br>
 <b class=ayet>lâ ilâhe illallâh</b> (Tanrı ancak Allah) [iki ayet]<br>
 37:35 <i class=ayet>
