--- a/rama/sabri.html
+++ b/rama/sabri.html
@@ -13,35 +13,85 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>25. <a href="sabri.html">Sabrı tavsiye</a></li>
-
-<p class=ayet>
-<b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
-<i></i> <br>
-<b></b> <br>
-<i></i>
+<pre>
+  vassâ: tavsiye etti
+  evsâ: vasiyet etti
+  tevâsâ: (karşılıklı) tavsiye etti
+  
+  tevâsav bis-sabr (Sabrı tavsiye ederler)
+</pre>
+<p>
+Sabır, nefsin iyi bir şey yapmak veya kötülüklerden kaçınmak için acıya, meşakkate tahammül kuvvetidir. Kitabımızda sabır tavsiye eden ayetler pek çok. Her iki anlamda da sabretmek, müslümanlığın bir gereği olarak karşımıza çıkıyor. Sabır isteyen dualar öğretiliyor: "Üzerimize sabır yağdır" (2:250, 7:126)
 </p>
+<p>
+Fakat <a href="/Kuran/mujam.html#r=Sbr&r=wSy" target="finder">iki ayet</a> 
+var ki, bunlardan farklı olarak, karşılıklı sabır tavsiye etmeyi güzel ahlakın bir parçası olarak sunuyor.
+</p>
+<p>
+Asr Suresi, asra (ikindi vakti veya asr-ı saadet) kasem ile başlayıp insanın husran (zarar ve ziyan) içinde olduğunu hatırlatıyor. Zararın tek istisnası var:
+</p>
+<p class=ayet>
+  <b>illellezîne âmenû ve'amilus-sâlihâti</b> <br>
+  <i>Ancak, iman edip de sâlih ameller işleyenler,</i><br>
+  <b>vetevâsav bil-haqqi vetevâsav bis-sabr</b> <br>
+  <i>birbirine hakkı tavsiye edenler ve <a name="v=103:3&r=wSy&r=Sbr">sabrı tavsiye edenler</a> hariç</i>
+</p>
+<p>
+Beled suresi <b class=ayet><a name="v=90:11&r=Eqb">'aqabe</a></b> 
+(90:11 sarp yokuş) kavramını aynı tavsiye ile anlatıyor:
+</p>
+90:17 <i class=ayet>Bir insanı hürriyete kavuşturmak veya açlık gününde doyurmak, inanıp birbirine <a name="v=90:17&r=wSy&r=Sbr">sabır tavsiye edenlerden</a> ve merhamet tavsiye edenlerden olmaktır.</i>
+<p>
+Zor günlerin üç tavsiyesi: Hakk, sabır, merhamet
+</a><br> 
+
 <figure>
-  <img alt=""
-       src="" />
+  <img alt="sabır tavsiye eden ebru levhası"
+    src="https://1.bp.blogspot.com/-VuV7oDTznyU/XrtgCm3ev9I/AAAAAAAAbTM/GMp1tKtZSFoAOWsJ58nEiOa0xWA_aeZhACLcBGAsYHQ/s1600/bu%2Bda%2Bge%25C3%25A7er.jpg" />
   <figcaption class="center small">
-    <a target="Kuran" href=""></a>
+    Bu da geçer yâhû -- Ebru: <a target="Kuran" 
+    href="https://www.instagram.com/p/6IyXRgDm3g/?igshid=gtev4r0u810m">Nihal Türe</a>
   </figcaption>
 </figure>
+<p>
+Meşakkate sabır örneği için önce şu linke bakalım: 
+<a target="Kuran"
+href="http://www.iskenderpasa.com/079C95D8-2CED-4A3B-873D-AF71DDE8DD1C.aspx">Tebük Seferi</a> 
+Efendimizin bizzat yönettiği son askeri hareket. 
+Yaz sonu sıcağında hurmalar toplanmayı beklerken 50 günlük bir sefer:<br>
+700 km -- 15 gün gidiş, 20 gün bekleyiş, 15 gün dönüş.<br>
+(Yaklaşık olarak İstanbul-Amasya uzaklığı kadar)
+</p>
+<figure>
+  <img alt="Tebük-Medine arasını gösteren harita"
+    src="https://1.bp.blogspot.com/-jZqfx9PP-Qc/XsJ4Al6XVeI/AAAAAAAAbVQ/Nq5mxdtZZNwZ_3qL_Nioo2G1dBaZyblJgCLcBGAsYHQ/s1600/Tebuk.PNG" />
+  <figcaption class="center small">
+    Tebük Medine'nin neresinde?
+  </figcaption>
+</figure>
+</p>
+<p>
+Haritada çarpı ile gösterdiğim yer Hudeybiye.
+Tebük'ten üç yıl önce silahsız umre seyahati.
+Kâbe'ye 15 km kadar yaklaştıktan sonra...
+müşrikler izin vermeyince Medine'ye geri dönüş...
+</p>
+<p>
+Lakin Hudeybiye'de sabır, fetih (açılış) oldu:
+iki yıl sonra Mekke'nin fethi ve Huneyn,
+üç yıl geçmeden Roma'ya karşı Tebük,
+dördüncü yıl büyük hacc ile ümmetine veda...
+</p>
+<p>
+Bunlarla kıyaslayınca, bizim çektiğimiz meşakkat mi sayılır?
+</p>
 <br>
-
-<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
-<p class=ayet>
-<b></b> <br>
-<i><a name="v=12:39&r=wHd&r=qhr"></a></i>
-</p><br>
-
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G2v_17c7GF8" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
