--- a/rama/index.html
+++ b/rama/index.html
@@ -64,7 +64,7 @@
   <li>16. <a href="usve.html">Güzel bir örnek</a></li>
   <li>17. <a href="rahmet.html">Alemlere rahmet</a></li>
   <li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
-  <li>19. min azmil-umûr</li>
+  <li>19. <a href="azmil.html">min azmil-umûr</a></li>
   <li>20. yevme lâ yenfa'u</li>
   <li>21. Emrolunduğun gibi</li>
   <li>22. Emredileni yaparlar</li>
