day 19 use <details>
to hide the answer

--- a/rama/azmil.html
+++ b/rama/azmil.html
@@ -55,7 +55,10 @@ her ikisi de 'ayn sesi ile başlar.
   başına gelene sabret; doğrusu bunlar 
   <a name="v=31:17&r=Ezm&r=Amr">azme değer işlerdendir</a>."</i> (Hz Lokman) <br>
 <br>
-Üç ayetteki ortak kelime hemen dikkati çekiyor mu? Evet, sabır! Azme değer bir iş...
+<details>
+  <summary>Üç ayetteki ortak kelime hemen dikkati çekiyor mu?</summary>
+  <p>Evet, sabır! Azme değer bir iş...</p>
+</details>
 </p>
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
