26. Ona "ol" der

--- a/rama/older.html
+++ b/rama/older.html
@@ -13,36 +13,43 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>26. <a href="older.html">Ona "ol" der</a></li>
+<pre>
+  qâle: dedi, qul: de, yaqûlu: der
+  lehû: ona
+  kâne: oldu, kun: ol, yekûnu: olur
+  
+  yaqûlu lehû kun feyekûn (Ona "ol" der ve olur)
+</pre>
 
-<p class=ayet>
-<b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
-<i></i> <br>
-<b></b> <br>
-<i></i>
+<p class="preWrap">Bu söz Kuran'da <a href="/Rehber/finder.html#b=kn%20fykwn" target="finder">sekiz yerde</a> geçiyor:
+2:117, 3:47, 3:59, 6:73, 16:40, 19:35, 36:82, 40:68
+Bunların ikisine yakından bakalım.
+
+Allah'ın kudretinde acz olmadığı için küçük büyük ne varsa Allah aynı kolaylıkla yaratır. Allah için çiçeği yaratmakla, baharı veya cenneti yaratmak arasında bir fark yoktur. Hiçbir sebebe ihtiyacı yoktur, "ol" der ve oluverir. Yasin suresi bu haberle son buluyor:
+36:82 <i class=ayet>Bir şeyi dilediği zaman, O'nun buyruğu sadece ona <a name="v=36:82&r=kwn">"ol" demektir ve olur</a>.</i>
+
+Hz İsa'nın olağandışı, akla sığmayan doğumuna şu açıklama yapılmış:
+3:59 <i class=ayet>Şüphesiz Allah katında İsa'nın durumu, Adem'in durumu gibidir. Onu topraktan yarattı. Sonra ona <a name="v=3:59&r=kwn">"ol" dedi ve oldu</a>.</i>
 </p>
 <figure>
-  <img alt=""
-       src="" />
+  <img alt="hat levhası"
+       src="https://1.bp.blogspot.com/-4lqr7s2BicM/XrtgBs9t1aI/AAAAAAAAbTY/nLUWMisTiHkAfOxbeMzGt4FjxvJ7l8SQQCEwYBhgLKs4DAL1Ocqw0Pryf2x8BjwyQQeOddiow21KRB326IN6Z7_cV6c8pqW7IGI8yOww5k5jH5EQ6oAu2neCzMd4VIB5VtDXOaQdMOY0DZVsFMgvvkWKw0jlVMaW5asKWH18FvYgVXjRHuylsurjUl17NZFw7p9teeuZIX7Da62cP8fwW2dBIH2npJZFImJy0_fCn25FrUQz4obMjcArhikGooILaXrIqiWoDVRm7eboJgol-DoVOP56nkIpBhKl8oQpCpz6o0e8ocLxwfryTRLWVLMkSprmxTQQkOh_RgPKmQhwtngb8punYgYwkq1UoLbk_W2ZXaGUPrAW8AUjScQm4VSHh4PyOT70QtOMJtAPNwMRCTwvASZn1u61HdkVHvT2mmX8A-0IdoCc9GWh6J_wXNlelKfI3OMNVjpx76rP8awquhR9hlM-IaCBzRR2swqomn_AVnUpKcG_dSbFYjKGQmIzRptPmxIVcqPAX9vYjvgkJ1Sjf1h-vUtmbxv3-AYGolHC5gq9SzOqrQZqr_P3s1bXEB-8dEX1YbyyRD-18fuhv7n7gnJYFlPuKCo1rOxQzJ-FFUbOiLQ2HoFwfsFAg2JzNQ2tdM0w6xn3hGidzevS1MKHG7fUF/s1600/kun%2Bfeyekun.jpg" />
   <figcaption class="center small">
-    <a target="Kuran" href=""></a>
+    <b class=ayet>kun feyekûn</b>&ensp; 
+    <a target="Kuran" href="https://www.pinterest.co.uk/pin/527061962636123330/">Kaynak</a> 
   </figcaption>
 </figure>
+
+<h3>Sözle nasıl "olunur"?</h3>
+
+<p>Allah bir şeyin olmasını dilediğinde, "ol" demesi yeterlidir. Yani O herşeye kâdirdir, başka bir sebebe, etkiye, zamana, maddeye, ihtiyacı yoktur. "Ol" demesi külli iradesinin tecellisidir. İmtihan gereği, mucizeler dışındaki her şey bu maddi alemde sebeplere bağlanmıştır. Ama, sebeplere ihtiyaç yoktur, onlar ancak imtihan aracıdır.</p>
 <br>
-
-<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
-<p class=ayet>
-<b></b> <br>
-<i><a name="v=12:39&r=wHd&r=qhr"></a></i>
-</p><br>
-
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uwAcunMHnF4" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
-
+</iframe><br>
     <script src="init.js"></script>
   </body>
 </html>
