--- a/rama/index.html
+++ b/rama/index.html
@@ -65,7 +65,7 @@
   <li>17. <a href="rahmet.html">Alemlere rahmet</a></li>
   <li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
   <li>19. <a href="azmil.html">min azmil-umûr</a></li>
-  <li>20. yevme lâ yenfa'u</li>
+  <li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
   <li>21. Emrolunduğun gibi</li>
   <li>22. Emredileni yaparlar</li>
   <li>23. Zikir ve şükür</li>
