--- a/rama/index.html
+++ b/rama/index.html
@@ -66,7 +66,7 @@
   <li>18. <a href="illa.html">lâ ilâhe illâ ...</a></li>
   <li>19. <a href="azmil.html">min azmil-umûr</a></li>
   <li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
-  <li>21. Emrolunduğun gibi</li>
+  <li>21. <a href="festaqim.html">Emrolunduğun gibi</a></li>
   <li>22. Emredileni yaparlar</li>
   <li>23. Zikir ve şükür</li>
   <li>24. Hesabı hızlıdır</li>
