--- a/rama/index.html
+++ b/rama/index.html
@@ -67,7 +67,7 @@
   <li>19. <a href="azmil.html">min azmil-umûr</a></li>
   <li>20. <a href="yevme.html">yevme lâ yenfa'u</a></li>
   <li>21. <a href="festaqim.html">Emrolunduğun gibi</a></li>
-  <li>22. Emredileni yaparlar</li>
+  <li>22. <a href="yaparlar.html">Emredileni yaparlar</a></li>
   <li>23. Zikir ve şükür</li>
   <li>24. Hesabı hızlıdır</li>
   <li>25. Sabrı tavsiye</li>
