son dört konu 27-30

--- a/rama/insaa.html
+++ b/rama/insaa.html
@@ -13,35 +13,70 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>27. <a href="insaa.html">inşâallâh</a></li>
+<pre>
+  in: eğer    - en: bağlaç (that)
+  şâe: diledi - yeşâ: diliyor
+</pre>
 
-<p class=ayet>
-<b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
-<i></i> <br>
-<b></b> <br>
-<i></i>
+<b>inşâallâh</b> (Allah dilediyse)
+<p class="preWrap">Allah dilemeden hiçbir fikir gerçekleşemiyor, hiçbir hayal hakikat olamıyor. Kitabımızdaki enbiyâ kıssalarında <a href="/Rehber/finder.html#b=<n%20$A'%20Allh" target="finder">bunun birçok örneği</a> var.
+
+• Hz İbrahim, oğluna rüyasını anlatıp fikrini soruyor, "ne dersin?"
+37:102 <i class=ayet>"Babacığım! Emrolunduğun gibi yap"</i> 
+<b class=ayet>setecidunî in şâallâhu mines-sâbirîn</b> 
+<i class=ayet>"<a name="v=37:102&r=$yA">Allah dilerse</a>, sabredenlerden olduğumu göreceksin"</i>
+
+• Torunu Yakub, uzun bir ayrılıktan sonra sevgili oğullarına kavuşuyor. Yusuf anasını, babasını, kardeşlerini bağrına basıp şöyle diyor:
+12:99 <b class=ayet>udhulû misra in şâallâhu âminîn</b> 
+<i class=ayet><a name="v=12:99&r=$yA">Allah dilerse</a>, güven içinde Mısır'a girin</i>
+İsrailoğulları Mısır'a böyle giriyor.
+
+Sonraki üç ayet de onları Mısır'dan çıkartan nebinin hikayesinde.
+• Hz Şuayb, hem damat hem yardımcı olarak anlaştığı Musa'ya diyor:
+28:27 <b class=ayet>setecidunî in şâallâhu mines-sâlihîn</b> 
+<i class=ayet>"<a name="v=28:27&r=$yA">Allah dilerse</a>, salihlerden olduğumu göreceksin"</i>
+
+• Aynı Musa, "kendisine ilim öğretilen kula" benzeri bir söz veriyor:
+18:69 <b class=ayet>setecidunî in şâallâhu sâbirâ</b>
+<i class=ayet>"<a name="v=18:69&r=$yA">Allah dilerse</a>, sabırlı olduğumu göreceksin"</i>
+Fakat, Hz Musa bu sözünü tutamıyor, zaten o sınava kim dayanabilirdi ki...
+
+• İsrailoğulları Mısır'dan çıkmış, ama çölden çıkamıyorlar. Zor şartlarda hayat devam ediyor. Hayat sınav demek, bir inek kesmeleri emrediliyor:
+2:70 <i class=ayet>"Rabbine bizim adımıza yalvar da, mahiyetini bize bildirsin, çünkü sığırlar, bizce birbirine benzemektedir. <a name="v=2:70&r=$yA">Allah dilerse</a>, biz şüphesiz doğruyu bulmuş oluruz" dediler.</i>
+Ama gerçeği söylemiyorlardı, ipe un sermekti maksat. Kelimenin "orta-doğu anlamı" buydu: "(hiç niyetimiz yok, ancak) Allah dilerse"
+
+• Uzun yıllar sonra, son Peygamber yenilgi gibi görülen bir anlaşma imzalıyor. Hayret! Meğer en büyük zafer buymuş, yorgun ve yenik Medine'ye dönerken Fetih suresi müjdeyi veriyor:
+48:27 <b class=ayet>letedhulunnel-mescidel-harâme in şâallâhu âminîn</b>
+<i class=ayet><a name="v=48:27&r=$yA">Allah dilerse</a>, güven içinde Mescidil-haram'a gireceksiniz</i>
+Bu ilâhi müjde bile Allah'ın dilemesine bağlanmış.
+Kesinlikle olacak, ancak O'nun dilemesi ile.
 </p>
+<!-- https://okuyun.github.io/Kuran/#b=<n%20$A'%20Allh -->
+
 <figure>
-  <img alt=""
-       src="" />
+  <img alt="tamamlanmamış bir hat eseri"
+       src="https://1.bp.blogspot.com/-WPoOA67SdDA/Xr_iv7wXQ4I/AAAAAAAAbUs/N_Ntfj8nsHUFA7311t8nngK1UjPAD_JSACLcBGAsYHQ/s1600/INSHAA%2BALLAH.jpg" />
   <figcaption class="center small">
-    <a target="Kuran" href=""></a>
+    Allah dilediyse bitecek bir çalışma -- <b>inşâallâh</b></a>
   </figcaption>
 </figure>
+<p class="preWrap">Buna çok benzeyen bir ifade daha var:
+<b>ey-yeşâallâh</b> (Allah'ın dilemesiyle)
+
+Kehf suresindeki şu öğüt hiç aklımızdan çıkmasın:
+<i class=ayet>Hiçbir şey için "Yarın bunu yapacağım" deme,</i>
+18:24 <b class=ayet>illâ ey-yeşâallâh</b> 
+<i class=ayet>ancak <a name="v=18:24&r=$yA">Allah'ın dilemesi</a> ile</i>
+</p>
+<!-- https://okuyun.github.io/Kuran/#b=y$A'%20Allh -->
+
 <br>
-
-<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
-<p class=ayet>
-<b></b> <br>
-<i><a name="v=12:39&r=wHd&r=qhr"></a></i>
-</p><br>
-
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MBYncaOmH_8" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
