--- a/rama/korku.html
+++ b/rama/korku.html
@@ -13,35 +13,56 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>28. <a href="korku.html">Korku ve hüzün</a></li>
+<pre>
+  havf: korku
+  lâ tahaf: korkma
+  yahzen: hüzünlenir
+  lâ tahzen: üzülme
+</pre>
 
-<p class=ayet>
-<b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
-<i></i> <br>
-<b></b> <br>
-<i></i>
+<p class="preWrap"><b class=ayet>lâ havfun 'aleyhim velâ hum yahzenûn</b>
+<i class=ayet>onlara korku yok, onlar üzülmezler</i>
+  
+Korkuların egemen olduğu bir devirde yaşıyoruz. Terör korkusu, savaş korkusu, deprem korkusu, yangın korkusu, kasırga korkusu, ve şimdi virüs korkusu... Hepsinin ortak tarafı: ölüm korkusu.
+
+Lakin Allah <a href="/Rehber/finder.html#b=lA%20xwf" target="finder">korku yok</a> diyor, defalarca... Bu ayetlere değil, iki ayrı kıssaya bakalım bugün:
+
+<b class=ayet>lâ tahzen innallâhe ma'anâ</b>
+9:40 <i class=ayet><a name="v=9:40&r=Hzn">üzülme Allah bizimle</a></i>
+
+İki arkadaş mağarada saklanıyorlar. Peşlerinde onları öldürmeye yemin etmiş, kılıçları bilenmiş, gözleri dönmüş korkunç bir sürü... Korkmak için her sebep var. Lakin, o ikinin birisi (salat ve selam onun) arkadaşına şöyle fısıldıyor: "Üzülme Allah bizimledir"
 </p>
 <figure>
-  <img alt=""
-       src="" />
-  <figcaption class="center small">
-    <a target="Kuran" href=""></a>
+  <img alt="hat levhası"
+       src="https://1.bp.blogspot.com/-9BDHePaZgjc/XrtgDKodAlI/AAAAAAAAbTg/nHUkQkXyGI4fXKzOTnM4aW3bj12b_Vp1QCEwYBhgLKs4DAL1OcqzMAv6dUIlnNGURkV-FpHqzlMP1hRjcI-lvFR4gQNJ5lIjFWYeCaa7W4_s7t9kgOWg1xHWfug5G6Mzj280cy0TgQAuii7IzGn21p2XjICC-XrxMHaAiBYNopWSVBtYzFj55D10Hqtbe-Y7_W7fymtwevbz3FTXcDVZXlKDOwy4g1rx8_XlKuqDtnay18xs88KYW0KVkVTp4BQT-qIxrBQqG1Rox-PXVsOQRIzF7tFuwPjrNHvDhebMtd7cGFn-W_yji8eckr5gbYqe-ctgw7h0jJMBJdc6lyPrK4R1TGAIe5Sqn6ZB0-1QoLx2L2h4kXm0Xxyg1SSpfWcFldg7tIFMAecyYSKW0bZVk-a0gAcVP6rFdcbQ31VnGC-Ys-1l_8yM6LtOzYVjrV08WxNtDV7WQXEESrUq1Iu4AqK3zCVFHZjf43VIDvDcqqVGbNVDpjWQFgzU5YFBEK1RFHz3ncLdwAPzBAa3IXV_iLXNZ-vtnPX3l2tkbpg7viGQdGPcZpokigSWtvIqpiBL4a2cGyLS7L47BYAoBztGfgEVLL87pRZalXEoWf8mkQgY6ToknLtVxR-ni9O6-3PI3eZ5V9jsNpCNi7uJnReHvMMvI7fUF/s1600/la%2Btahzen.jpg" />
+  <figcaption class="center">
+    "Üzülme Allah bizimledir"
   </figcaption>
 </figure>
+
+<b class=ayet>kellâ inne ma'iye rabbiy</b><br>
+26:62 <i class=ayet><a name="v=26:62&r=rbb">Hayır! Rabbim benimle</a></i>
+
+<p>Gecenin ortasında asırlardır ezilmiş binlerce insan denize doğru kaçıyor. Peşlerinde Firavun ve adamları. Onlar yaya, bunlar atlı; onlar köle, bunlar silahlı... Denizin ve gecenin karanlığında, ölüm korkusunun uç noktasında bir adam inançla haykırıyor: "Hayır! Rabbim benimledir"</p>
+
+<figure>
+  <img alt="hat levhası: kellâ ve yanında güneş"
+       src="https://1.bp.blogspot.com/-gLbYxHlpC6Q/XsWbPVpqMfI/AAAAAAAAbWE/BO3fcgNfFswbfJidHSCUZOR5Ehc9eOiXwCLcBGAsYHQ/s1600/maiye%2Brabbi.jpeg" />
+  <figcaption class="center">
+    "Hayır! Rabbim benimledir"
+  </figcaption>
+</figure>
+
+İki hikayenin de devamını iyi biliyoruz...<br>
+Demek ki iman varsa korkuya yer yok!
+</p>
 <br>
-
-<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
-<p class=ayet>
-<b></b> <br>
-<i><a name="v=12:39&r=wHd&r=qhr"></a></i>
-</p><br>
-
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v-6YjwgYDWo" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
