--- a/rama/onubiz.html
+++ b/rama/onubiz.html
@@ -13,35 +13,47 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<li>29. <a href="onubiz.html">Onu Biz koruruz</a></li>
+<pre>
+  innâ: biz (vurgulu)
+  lehû: ona
+  hâfiz: koruyucu
+  lehâfizûn: koruyucular (vurgulu)
+</pre>
 
-<p class=ayet>
-<b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
-<i></i> <br>
-<b></b> <br>
-<i></i>
-</p>
+15:9 <span class=ayet><a name="v=15:9&r=HfZ">veinnâ lehû lehâfizûn</a></span><br>
+<i class=ayet>Şüphesiz o zikri Biz indirdik, onun koruyucusu da elbette Biziz.</i>
+
+<p>Kuran'ın korunmuşluğu tarihsel bir vaka: Dünyanın neresine giderseniz gidin, farklı bir kopyasını bulamazsınız. İnsanların yazdığı her metnin zaman içinde az çok değiştiğini biliyoruz. Bu metnin hiç değişmeden kalmış olması tek başına bir mucizedir, çünkü başka bir örneği yok.</p>
+
 <figure>
-  <img alt=""
-       src="" />
+  <img alt="hat levhası"
+       src="https://photos1.blogger.com/blogger/4806/624/400/onu%20Biz%20koruruz.jpg" />
   <figcaption class="center small">
-    <a target="Kuran" href=""></a>
+    O zikri Biz indirdik, onun koruyucusu da elbette Biziz
   </figcaption>
 </figure>
+
+<p class="preWrap">
+<b>İnci misali</b>
+
+Korunmanın diğer bir boyutu da, alelade görünüp içindeki kıymetlerin saklanması. Okyanuslarda değersiz, sıradan taşlar bulunur. İnci çıkaranlar onlara hiç değer vermez. Aradıkları, taşlaşmış istiridyelerdir, içlerinde pırıl pırıl inciler olan istiridyeler. Adi taşlardan görünüşte hiç farkları yoktur, ama erbabı onları bulup çıkarır. Eğitilmemiş gözlerden gizlenmiş, korunmuştur.
+
+Vâkıa suresinde <b>meknûn</b> kelimesi ile bu anlam ifade edilmiş:
+
+56:77 <b class=ayet>innehû lequrânun kerîm</b> 
+<i class=ayet>o kerim bir Kur'an'dır</i>
+56:78 <b class=ayet><a name="v=56:78&r=ktb&r=knn">fî kitâbin meknûn</a></b>
+<i class=ayet>korunmuş bir kitaptadır</i>
+
+Bu kelime aynı surede hem Kuran hem de inci için de kullanılmış. Benzetme çok açık: Alelade taşlar yerine sıradan sözleri düşünelim. İnci yüklü sıradışı söz de Kuran oluyor; bakmayan gözlerden, dinlemeyen kulaklardan, düşünmeyen akıllardan korunmuş...
+</p>
 <br>
-
-<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
-<p class=ayet>
-<b></b> <br>
-<i><a name="v=12:39&r=wHd&r=qhr"></a></i>
-</p><br>
-
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/soXaZCzb60M" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
