--- a/rama/zikir.html
+++ b/rama/zikir.html
@@ -14,7 +14,7 @@
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
 <b class=ayet>
-  <li>fezkurullâhe yezkurkum</li>
+  <li>fezkurûnî ezkurkum</li>
   <li>lein şekertum</li>
   <li>velezikrullâhi ekber</li>
   <li>elâ, bizikrillâhi...</li>
@@ -22,7 +22,7 @@
 <p>Bazı hutbelerde duyduğumuz bu sözleri ayetlerde arayalım.</p>
 
 <li>Allah'ı anın ki O da sizi ansın:<br>
-2:152 <b class=ayet><a name="v=2:152&r=*kr">fezkurullâhe yezkurkum</a></b><br>
+2:152 <b class=ayet><a name="v=2:152&r=*kr">fezkurûnî ezkurkum</a></b><br>
 <i class=ayet>Beni anın, sizi anayım. Bana şükredin, küfretmeyin.</i>
 </li>
 <br>
