--- a/rama/index.html
+++ b/rama/index.html
@@ -69,7 +69,7 @@
   <li>21. <a href="festaqim.html">Emrolunduğun gibi</a></li>
   <li>22. <a href="yaparlar.html">Emredileni yaparlar</a></li>
   <li>23. <a href="zikir.html">Zikir ve şükür</a></li>
-  <li>24. Hesabı hızlıdır</li>
+  <li>24. <a href="hesap.html">Hesabı hızlıdır</a></li>
   <li>25. Sabrı tavsiye</li>
   <li>26. Ona "ol" der</li>
   <li>27. inşâallâh</li>
