--- a/rama/index.html
+++ b/rama/index.html
@@ -70,13 +70,13 @@
   <li>22. <a href="yaparlar.html">Emredileni yaparlar</a></li>
   <li>23. <a href="zikir.html">Zikir ve şükür</a></li>
   <li>24. <a href="hesap.html">Hesabı hızlıdır</a></li>
-  <li>25. Sabrı tavsiye</li>
-  <li>26. Ona "ol" der</li>
-  <li>27. inşâallâh</li>
-  <li>28. Korku ve hüzün</li>
-  <li>29. Onu Biz koruruz</li>
-  <li>30. Dualarının sonu</li>
-</ol>
+  <li>25. <a href="sabri.html">Sabrı tavsiye</a></li>
+  <li>26. <a href="older.html">Ona "ol" der</a></li>
+  <li>27. <a href="insaa.html">inşâallâh</a></li>
+  <li>28. <a href="korku.html">Korku ve hüzün</a></li>
+  <li>29. <a href="onubiz.html">Onu Biz koruruz</a></li>
+  <li>30. <a href="son.html">Dualarının sonu</a></li>
+  </ol>
 
 <p>Bu konuların hemen hepsi önceki Ramazan'da blog olarak yayınlanmıştı. 
 Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
@@ -90,10 +90,9 @@ Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
 <q>Ama Arapça okuyamam</q> diyorsanız,
 en azından, Kuran kelimelerine aşina olursunuz.
 </p>
-
-<!-- <a target=Kuran
+<a target=Kuran
 href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
-Videolar burada</a> -->
+Videolar burada</a><br>
 
     <script src="init.js"></script>
   </body>
