--- a/rama/onubiz.html
+++ b/rama/onubiz.html
@@ -23,8 +23,8 @@
 15:9 <span class=ayet><a name="v=15:9&r=HfZ">veinnâ lehû lehâfizûn</a></span><br>
 <i class=ayet>Şüphesiz o zikri Biz indirdik, onun koruyucusu da elbette Biziz.</i>
 
-<p>Kuran'ın korunmuşluğu tarihsel bir vaka: Dünyanın neresine giderseniz gidin, farklı bir kopyasını bulamazsınız. İnsanların yazdığı her metnin zaman içinde az çok değiştiğini biliyoruz. Bu metnin hiç değişmeden kalmış olması tek başına bir mucizedir, çünkü başka bir örneği yok.</p>
-
+<p>Kuran'ın korunmuşluğu tarihsel bir vaka: Dünyanın neresine giderseniz gidin, farklı bir kopyasını<sup>(*)</sup> bulamazsınız. İnsanların yazdığı her metnin zaman içinde az çok değiştiğini biliyoruz. Bu metnin hiç değişmeden kalmış olması tek başına bir mucizedir, çünkü başka bir örneği yok.</p>
+<p>(*) <small>Farklı mushaflar vardır, ama bunlar ancak müzelerde ve kütüphanelerde bulunur. Akademik açıdan ilginç olsalar bile pratik anlamda bir değeri yoktur. Hakiki kıymeti olan gözlem şudur: Nerdeyse her konuda ihtilaf çıkaran üç millet (Türk, Arap, Acem) mushaf konusunda uyum içindedir.</small></p>
 <figure>
   <img alt="hat levhası"
        src="https://photos1.blogger.com/blogger/4806/624/400/onu%20Biz%20koruruz.jpg" />
