--- a/ders/index.html
+++ b/ders/index.html
@@ -22,8 +22,8 @@
   <li><a href=03.html>Sıfat ve zamirler</a></li>
   <li><a href=04.html>Tekil, ikil, çoğul</a></li>
   <li><a href="05.html">Sayılar</a></li>
-  <li>Fiil çekimi</li>
-  <li>Fiil türetme</li>
+  <li><a href="06.html">Fiil çekimi</a></li>
+  <li><a href="07.html">Fiil türetme</a></li>
 </ol>
 
 <p>(Dersler ilerledikçe bu sayfadaki linkler artacak)</p>
