add CSS and video

--- a/ders/06.html
+++ b/ders/06.html
@@ -111,10 +111,10 @@ yezzekere: zikreder, öğüt alır, hatırlar
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mElMymH1F0o" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe> -->
+</iframe>
 </p>
     <script src="init.js"></script>
   </body>
